<resources>
    <string name="app_name">测试工具v1.0</string>
    <string name="start_title">测试工具</string>
    <string name="serial_test">串口测试</string>
    <string name="device_test">GPIO/LED测试</string>
    <string name="lora_test">Lora测试</string>
    <string name="can_test">Can总线测试</string>
    <string name="psam_test">PSAM测试</string>

    <!--    串口测试-->
    <string name="select_serial_port">串口:</string>
    <string name="select_baud_rate">波特率</string>
    <string name="open_serial_port">打开串口</string>
    <string name="close_serial_port">关闭串口</string>
    <string name="no_serial_device">找不到串口设备</string>
    <string name="send_data">发送命令</string>
    <string name="sending_data">正在发送...</string>
    <string name="input_data">输入命令</string>
    <string name="load_cmd_list">加载命令列表</string>
    <string name="rs485_use_as_recive">RS485作为接收</string>
    <string name="test_multi_sreial">测试串口互发</string>
    <string name="second_use_as_rs485">第二个作为半双工RS485</string>
    <string name="lora_configure_command">LoRa配置命令</string>
    <string name="lora_comm_test">LoRa通讯测试</string>
    <string name="lora_radio">无线电（Radio）</string>
    <string name="lora_pmac_unicast">PMAC单播</string>
    <string name="lora_pmac_multicast">PMAC组播</string>
    <string name="lora_pmac_broadcast">PMAC广播</string>

<!--    GPIO测试-->
    <string name="get_gpio_value">获取</string>
    <string name="set_gpio_value">设置</string>
    <string name="led1">LED1</string>
    <string name="led2">LED2</string>
    <string name="led3">LED3</string>

    <string name="gpio_in_all">All</string>
    <string name="gpio_in_1">In_1</string>
    <string name="gpio_in_2">In_2</string>
    <string name="gpio_in_3">In_3</string>
    <string name="gpio_in_4">In_4</string>
    <string name="gpio_out_1">Out_1</string>
    <string name="gpio_out_2">Out_2</string>
    <string name="gpio_out_3">Out_3</string>
    <string name="gpio_out_4">Out_4</string>
    <string name="gpio_set_checkbox">设置</string>
    <string name="test_all_gpio_success">Success</string>
    <string name="test_all_gpio_failed">Failed!</string>

</resources>
