<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/gpio_spinner"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="@dimen/edit_text_size"
            android:entries="@array/gpios"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/device_is_set_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gpio_set_checkbox"/>
<!--            <EditText-->
<!--                android:id="@+id/device_value_et"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:visibility="gone"/>-->
            <Spinner
                android:id="@+id/device_value_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/edit_text_size"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/device_value_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/edit_text_size"
                android:gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/get_device_value_btn"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/get_gpio_value"/>
        <Button
            android:id="@+id/set_device_value_btn"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/set_gpio_value"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btn_led1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/led1"/>

        <Button
            android:id="@+id/btn_led2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/led2"/>/>

        <Button
            android:id="@+id/btn_led3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/led3"/>/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/gpio_out_all_cb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_gpio_height"
            android:text="@string/gpio_in_all"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_gpio_height"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/gpio_out1_cb"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/gpio_out_1"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="@dimen/default_gpio_height"/>
            <CheckBox
                android:id="@+id/gpio_in1_cb"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/default_gpio_height"
                android:layout_margin="5dp"
                android:enabled="false"
                android:text="@string/gpio_in_1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_gpio_height"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/gpio_out2_cb"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/gpio_out_2"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="@dimen/default_gpio_height"/>
            <CheckBox
                android:id="@+id/gpio_in2_cb"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/default_gpio_height"
                android:layout_margin="5dp"
                android:enabled="false"
                android:text="@string/gpio_in_2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_gpio_height"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/gpio_out3_cb"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/gpio_out_3"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="@dimen/default_gpio_height"/>
            <CheckBox
                android:id="@+id/gpio_in3_cb"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/default_gpio_height"
                android:layout_margin="5dp"
                android:enabled="false"
                android:text="@string/gpio_in_3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_gpio_height"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/gpio_out4_cb"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/gpio_out_4"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="@dimen/default_gpio_height"/>
            <CheckBox
                android:id="@+id/gpio_in4_cb"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/default_gpio_height"
                android:layout_margin="5dp"
                android:enabled="false"
                android:text="@string/gpio_in_4"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>